--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:16.0-alpine3.18
+    image: postgres:16.1-alpine3.18
     container_name: doki-postgres
     restart: unless-stopped
     environment:
@@ -26,7 +26,13 @@ services:
       - DB_SOURCE=postgresql://root:secret@postgres:5432/doki?sslmode=disable
     depends_on:
       - postgres
-    entrypoint: [ "/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh" ]
+    entrypoint:
+      [
+        "/app/wait-for.sh",
+        "postgres:5432",
+        "--",
+        "/app/start.sh"
+      ]
     command: [ "/app/main" ]
 
 volumes:
